--- a/mailing-list.html
+++ b/mailing-list.html
@@ -9,14 +9,16 @@
     <main>
         <h2>Подпишитесь <br> на нашу рассылку</h2>
         <p>Будем присылать хорошие письма, спам присылать не будем</p>
-        <form action="">
+        <form action="s">
             <input type="text" class="text-input" placeholder="Ваша почта">
             <p><input type="checkbox" /> Про детективы </p>
             <p><input type="checkbox" /> Про путешествия </p>
             <p><input type="checkbox" /> Про фантастику </p>
             <p><input type="checkbox" /> Про новинки </p>
         </form>
-        <input type="submit" class="button" value="Отправить">
+        <form action="/popular.html">
+            <input type="submit" class="button" value="Отправить">
+        </form>
     </main>
 </body>
 </html>
