--- a/genres.html
+++ b/genres.html
@@ -11,30 +11,30 @@
 
     <h2> Популярные жанры </h2>
     <p>Будем присылать хорошие письма, спам присылать не будем</p>
-    <div class="genre-first">Фантастика</div>
-    <div class="genre-second">Детективы</div>
-    <div class="genre-third">Мистика</div>
-    <div class="genre-fourth">Боевик</div>
+    <p><div class="genre-first">Фантастика</div></p>
+    <p><div class="genre-second">Детективы</div></p>
+    <p><div class="genre-third">Мистика</div></p>
+    <p><div class="genre-fourth">Боевик</div></p>
 
     <h2> Все жанры и теги </h2>
 
     <div class="row">
 
         <div class="col">
-            <p><a href="#" class="tag" class="genre=link">Зима </a></p>
-            <p><a href="#" class="tag" class="genre=link">Триллер</a></p>
-            <p><a href="#" class="tag" class="genre=link">Англия</a></p>
-            <p><a href="#" class="tag" class="genre=link">Магия</a></p>
-            <p><a href="#" class="tag" class="genre=link">Детектив</a></p>
-            <p><a href="#" class="tag" class="genre=link">Юмор</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Зима </a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Триллер</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Англия</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Магия</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Детектив</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Юмор</a></p>
         </div>
 
         <div class="col">
-            <p><a href="#" class="tag" class="genre=link">Роман</a></p>
-            <p><a href="#" class="tag" class="genre=link">Сказка</a></p>
-            <p><a href="#" class="tag" class="genre=link">Антиутопия</a></p>
-            <p><a href="#" class="tag" class="genre=link">Америка</a></p>
-            <p><a href="#" class="tag" class="genre=link">Смерть</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Роман</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Сказка</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Антиутопия</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Америка</a></p>
+            <p><a href="/mailing-list.html" class="tag" class="genre=link">Смерть</a></p>
         </div>
 
     </div>
