--- a/login.html
+++ b/login.html
@@ -11,8 +11,10 @@
         <img src="img/welcome.png" width="100%" alt="">
         <br><br>
         <input type="text" class="input-login" placeholder="Логин">
-        <input type="password" class="input-login" placeholder="Пароль">
-        <input type="submit" class="button" value="Отправить">
+        <p><input type="password" class="input-login" placeholder="Пароль"><p/>
+        <form action="/genres.html"w>
+            <input type="submit" class="button" value="Отправить">
+        </form>
     </main>
 </body>
 </html>
